update UserPrincipal to Security, add returnBook